[project]
name = "paper-replications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "cvxpy>=1.7.5",
    "gymnasium[accept-rom-license,atari]>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "shapely>=2.1.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
]

[tool.uv.workspace]
members = [
    "common",
]

[tool.uv.sources]
common = { workspace = true, editable = true }
